# MyMLLibrary

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  data.py  utils.py
test/: data_test.py  test.py  utils_test.py
