[metadata]
name='my_mllib',
version='0.1.0',
author='Kei Moriyama',
author_email='keischwiiz@gmail.com',
description='my ml library',
long_description=file: README.md
long_description_content_type = text/markdown
url = https://github.com/keimoriyama/MyMLLibrary
project_urls = 
    Bug Tracker = https://github.com/keimoriyama/MyMLLibrary/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
